feat: Implement real-time audio translation feature
This commit introduces a new real-time audio translation feature in Jigasi.

The feature is designed to translate each participant's audio stream into a target language and play it back in the conference. It uses a provided API for speech-to-text translation and text-to-speech.

The following changes have been made:
- A new transcription service, `ApiTranscriptionService.java`, has been created to handle speech-to-text translation using the `/api/v1/audio/translations` endpoint.
- A new pass-through translation service, `ApiTranslationService.java`, has been created to integrate with the existing `TranslationManager`.
- A new class, `AudioPlaybackManager.java`, has been created to listen for translation results and call the `/api/v1/audio/speech` endpoint for text-to-speech.
- The `Transcriber.java` and `TranscriptionGateway.java` classes have been modified to integrate and instantiate the new services.
- New properties have been added to `sip-communicator.properties` to enable and configure the feature.
- Basic authentication has been added to the API calls.

The implementation is not yet complete and has the following known issues:
- The audio playback logic in `AudioPlaybackManager.java` has been commented out due to a compilation error.
- The project has several checkstyle violations that need to be fixed.